--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,6 +8,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+    - run: sudo apt install libncurses5-dev libncursesw5-dev 
     - uses: actions/checkout@v1
     - name: Build
       run: cargo build --verbose
