--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -7,7 +7,7 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - run: DEBIAN_FRONTEND=noninteractive sudo apt-get install libncurses5-dev libncursesw5-dev 
+    - run: sudo DEBIAN_FRONTEND=noninteractiveapt-get install libncurses5-dev libncursesw5-dev 
     - uses: actions/checkout@v1
     - name: Build
       run: cargo build --verbose
