--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -4,10 +4,10 @@ on: [push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
 
     steps:
+    - run: sudo DEBIAN_FRONTEND=noninteractive apt-get install libncurses5-dev libncursesw5-dev 
     - uses: actions/checkout@v1
     - name: Build
       run: cargo build --verbose
@@ -15,7 +15,6 @@ jobs:
       run: cargo test --verbose
   
   clippy:
-    
     runs-on: ubuntu-latest
     
     steps:
