--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -13,9 +13,8 @@ jobs:
       run: cargo build --verbose
     - name: Run tests
       run: cargo test --verbose
-    - uses: davidB/rust-cargo-make@v1
     - name: Cargo Tarpaulin
-      run: cargo make cargo-tarpaulin && cargo tarpaulin -o Xml
+      run: cargo install cargo-tarpaulin && cargo tarpaulin -o Xml
     - name: Codecov
       uses: codecov/codecov-action@v1.0.3
       with:
