--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,3 +21,5 @@ jobs:
       - uses: actions/checkout@v1
       - name: Check Clippy
         uses: actions-rs/clippy-check@v1.0.0
+        with:
+          token: ${ secrets.GITHUB_TOKEN }
